--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - 'master'
 
 jobs:
-  build-test:
+  deploy:
     runs-on: ubuntu-18.04
 
     steps:
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: build
+    - name: Build
       run: npm run build
 
     - name: Deploy to GitHub Pages
